# agentic-knowledge-web

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  env.example  main.py  pyproject.toml  requirements.txt
data/: test_note.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  DocumentView.jsx  FileUpload.jsx  GraphView.jsx  Layout.jsx  NodeInfoPanel.jsx  ResetButton.jsx  StatsBar.jsx
frontend/src/lib/: api.js
frontend/src/store/: useStore.js
src/agents/: retriever.py  supervisor.py
src/api/: __init__.py  chat.py  deps.py  documents.py  graph.py  ingest.py  reset.py
src/database/: chroma_client.py  neo4j_client.py
src/scripts/: ingest.py  llm.py  query.py  reset.py
