[project]
name = "agentic-knowledge-web"
version = "0.1.0"
description = "基於 GraphRAG 與 Multi-agent 的全端智能筆記與互動知識圖譜系統"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
extraPaths = ["."]
